recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      avance(100.)
      ^FourSquare:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      droite(90.)
      ^FourSquare:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      avance(100.)
      ^FourSquare:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      droite(90.)
      ^FourSquare:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      avance(100.)
      ^FourSquare:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      droite(90.)
      ^FourSquare:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      avance(100.)
      ^